<resources>
    <string name="app_name">KodeUp</string>
    <string name="login_hint">Логин/E-mail</string>
    <string name="password_hint">Пароль</string>
    <string name="enter_text">Войти</string>
    <string name="registry_text">Зарегистрироваться</string>
    <string name="login_input_error">Ошибка логина. Неверный логин или пароль</string>
    <string name="input_error">Ошибка ввода данных</string>
    <string name="success">Данные были успешно добавлены</string>
    <string name="login_error">Логин уже занят</string>
    <string name="email">Введите email</string>
    <string name="final_email">Ваш email</string>
    <string name="final_password">Ваш пароль</string>
    <string name="password_fr">Придумайте пароль</string>
    <string name="password_fr_again">Повторите пароль ещё раз</string>
    <string name="logout">Выйти</string>
    <string name="ImageMenu_name">Изображение</string>
    <string name="OrganizerMenu_name">Органайзер</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_empty_info" >s</string>
    <string name="tab1_empty_text">Нет заметок</string>
    <string name="tab1_name">Заметки</string>
    <string name="tab2_name">Справочник</string>
    <string name="lbl_new_note_title">Новая заметка</string>
    <string name="lbl_edit_note_title">Редактирование заметки</string>
    <string name="lbl_edit_contact_title">Редактирование контакта</string>
    <string name="hint_enter_note">Введите текст вашей заметки!</string>
    <string name="image_type">Image_type:</string>
    <string name="fresco">Fresco</string>
    <string name="picasso">Picasso</string>
    <string name="msg_new_contact">Новый контакт</string>
    <string name="hint_layout_tab2">Введите контакт</string>
    <string name="hint_layout_descr">Введите описание</string>
    <string name="hint_layout_e_mail">E-mail</string>
    <string name="hint_tab2_phone">Телефон</string>
    <string name="msg_no_contacts">Нет контактов</string>
    <string name="bs_name_phone">Телефон</string>
</resources>
